--- a/day8.html
+++ b/day8.html
@@ -19,9 +19,9 @@
 <h2>July 4</h2>
 
 <p>
-Travel back to Edinburgh and enjoy a final evening in Scotland.
-Prepare for onward travel to Paris before flying out on July 6th.
-
+Travel back to Edinburgh and spend a last evening in Edinburgh.
+fly out to Paris the next morning on July 5th.
+spend a half day in Paris, fly to Chicago on July 6th
 </p>
 <img src="flights_back.png" alt="Flight back from Edinburgh">
 
