--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <p>
 Arrive in Europe and fly solo into Scotland on June 27th.
-Settle into Edinburgh and explore the city over two days.
+ in Edinburgh and explore the city over two days.
 </p>
 <img src="flights_back.png" alt="Flight back from Edinburgh">
 
