--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
 
 <p>
 Arrive in Europe and fly solo into Scotland on June 27th.
- in Edinburgh and explore the city over two days.
+ in Edinburgh and explore the city for a day. next day do something like this:
+ <a href="https://www.rabbies.com/en-us/tour/st-andrews-the-fishing-villages-of-fife-day-tour-from-edinburgh"
+            target="_blank">
+            castle and village ruins tour
+        </a>
 </p>
 <img src="flights_back.png" alt="Flight back from Edinburgh">
-
+https://www.rabbies.com/en-us/tour/st-andrews-the-fishing-villages-of-fife-day-tour-from-edinburgh
 <ul>
     <li>Explore Old Town & Royal Mile</li>
     <li>Edinburgh Castle</li>
